# ChangeLog for media-gfx/sphinxcontrib-blockdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.6.1.ebuild:
  Keyworded amd64.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  11 Jan 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.5.ebuild, sphinxcontrib-blockdiag-0.6.ebuild:
  Keyworded x86.

*sphinxcontrib-blockdiag-0.6.1 (11 Jan 2011)

  11 Jan 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.6.1.ebuild:
  Version bump [260].

  10 Jan 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.6.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.6 (07 Dec 2010)

  07 Dec 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.6.ebuild:
  Version bump [240].

  29 Nov 2010; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.4.ebuild, sphinxcontrib-blockdiag-0.5.ebuild:
  Keyworded x86.

  28 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.5.ebuild:
  Keyworded amd64.

  10 Nov 2010; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.3.1.ebuild, sphinxcontrib-blockdiag-0.4.ebuild:
  Keyworded amd64.

  09 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.4.ebuild:
  Keyworded x86.

  05 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded x86.

  05 Nov 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.5 (29 Oct 2010)

  29 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.5.ebuild:
  Version bump [214].

*sphinxcontrib-blockdiag-0.4 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.4.ebuild:
  Version bump [198].

  06 Oct 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded ~x86.
