@@ -2,16 +2,14 @@
 Hash: SHA1
 
 DIST sphinxcontrib-blockdiag-0.6.1.tar.gz 5222 RMD160 ca4d27cbe672e104345c1b8d55cca8c60d94b393 SHA1 4493f9641cf1fcc32ab8209c803aa7092cb3418b SHA256 4291636abbde7d817a43350b7b57f394e6b31ba5a048ff1b4111ca8f7d22a880
-DIST sphinxcontrib-blockdiag-0.6.tar.gz 5218 RMD160 8ea4333a1e9ffd1744e48e3c48d9297f19427dc6 SHA1 943b7480f0e4c5f50abc5b6266e19ff9d019df3b SHA256 8e106aef226c502de50bc403ced696b69757218645e1840f0c870a98602f49a1
-EBUILD sphinxcontrib-blockdiag-0.6.1.ebuild 602 RMD160 bf411af05690f399e1c9f2ba0f27ad7f1e0e8ee3 SHA1 a92af79fcddc2e173976cb8c637fdbc42eaa5a9d SHA256 10c390e4e1ee1cf79da93f8e63afdf965385fd1867bfc1c111e78a8b30d644c1
-EBUILD sphinxcontrib-blockdiag-0.6.ebuild 661 RMD160 4f57f88ea51a4e292277249b65812d15db5e7dcc SHA1 92a75a38926959deb4e05092c11fa1d9f6874abc SHA256 61070585f79ba7d6520f90f131db2e0895e2b69868f635adb5d81b69ceb01ebb
-MISC ChangeLog 2242 RMD160 cf38ad68e941125b2201d2ac9666ae3d49dc7876 SHA1 f64dee2edac25034b985708cf632e3553fa8542d SHA256 3b7a75edc1363bb8119a6f00b2463f22bf7d7e692ed84f261b6b64b76184ba3d
+EBUILD sphinxcontrib-blockdiag-0.6.1.ebuild 601 RMD160 30220163f34443dab6f52d17136566f1c41485bc SHA1 6fced8915f15ef57141600226135836489e748c9 SHA256 01e6497d909e2300fb0251b0f6fb743af19f3a69df5f84ae2f1f77ca4e00cb99
+MISC ChangeLog 2382 RMD160 b07eb3e549d4cc202bd4b059969e0f1ec335b897 SHA1 dde62c6848a5d938b0564ff679499e61c1dcc8da SHA256 ca08ba5ce22859f5ce5ba5398658dc870c1414d91ed27b50c25109f13b11464f
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk1UQvUACgkQzJrj3cAXR0k45wCeO27P+TD07JHv5lbxSYE7f3mp
-sGgAnjvUbj01Qi+ykTtiupzmrBcQriPu
-=367J
+iEYEARECAAYFAk1UWrMACgkQzJrj3cAXR0mV9wCgqPIgngVBB30gAOxIRCaq2Awd
+KPQAoIzk6stftC0ab+Bqs4gZmibLeA+R
+=HW21
 -----END PGP SIGNATURE-----
